# beat-me-daddy

./: .env_example  .gitignore  .twitch.irc.example.toml  Cargo.toml  README.md  TODO.md  type-me-daddy
src/: bangers.rs  client.rs  event.rs  event_bus.rs  lib.rs  main.rs  opt.rs  prime_listener.rs  quirk.rs  server.rs  twitch.rs  twitch_chat_listener.rs
src/bangers/: bangers.rs  boolizer.rs  constants.rs  consts.rs  mod.rs
src/encoding/: base_encoding.rs  encoding.rs  mod.rs  squeeze_me_daddy.rs
src/miscom/: mod.rs  thishere.rs
src/twitch/: mod.rs  prime_listener.rs  runners.rs  twitch_chat_listener.rs  twitch_client.rs
