[package]
name = "beatmedaddy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.52"
dotenv = "0.15.0"
hyper = { version = "0.14.16", features = ["full"] }
reqwest = { version = "0.11.8", features = ["json"] }
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
structopt = "0.3.25"
tokio = { version = "1.15.0", features = ["full"] }
tungstenite = "0.16.0"
twitch-irc = "3.0.1"
url = "2.2.2"
