
[package]
name = "beatmedaddy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.52"
base64 = "0.13.0"
dotenv = "0.15.0"
hex = "0.4.3"
hyper = { version = "0.14.16", features = ["full"] }
itertools = "0.10.3"
reqwest = { version = "0.11.8", features = ["json"] }
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
structopt = "0.3.25"
termion = "1.5.6"
tokio = { version = "1.15.0", features = ["full"] }
tui = "0.16.0"
tungstenite = { version = "0.16.0", features = ["native-tls"] }
twitch-irc = "3.0.1"
url = "2.2.2"
